[package]
name = "package-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
## TODO Can just be normal sui deps
## expects sui repo to exist at same level as sui-packages
sui-types = { path = "../../../sui/crates/sui-types" }
move-binary-format = { path = "../../../sui/external-crates/move/crates/move-binary-format"}
move-bytecode-verifier = { path = "../../../sui/external-crates/move/crates/move-bytecode-verifier"}
move-disassembler = { path = "../../../sui/external-crates/move/crates/move-disassembler"}
move-ir-types = { path = "../../../sui/external-crates/move/crates/move-ir-types"}
sui-adapter-latest = { path =     "../../../sui/sui-execution/latest/sui-adapter" }
sui-verifier-latest = { path = "../../../sui/sui-execution/latest/sui-verifier/" }
sui-protocol-config = { path = "../../../sui/crates/sui-protocol-config/" }
prometheus = "0.13.*"
serde_json = "*"
base64 = "0.22.1"
